@@ -1,3 +1,12 @@
+2004-08-08  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b96
+
+	* New: Delete of multiple users.
+	
+	* Changed: Added possibility to transport an array via makeGalleryUrl
+
+	* Change: Comment out a button disabling due to JS error.
+	  Note: This needs to be fixed correctly !
+
 2004-08-06  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b95
 
         * Fix: Prevent foreach() error from being displayed when previewing
